--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <!-- Mobile UI -->
     <div class="mobile-ui">
-        <img src="logo.jpg" class="logo" alt="Logo">
+        <img src="logo.jpeg" class="logo" alt="Logo">
 
         <button class="btn">Register as new student</button>
         <button class="btn">I have AIS already</button>
