--- a/name.html
+++ b/name.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Interface Only</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <!-- Mobile UI -->
     <div class="mobile-ui">
         <img src="logo.jpg" class="logo" alt="Logo">
 
-        <a href="regname.html"><button class="btn">Register as new student</button></a>
-        <a href="name.html"><button class="btn">I have AIS already</button></a>
+        <h1>Enter your name</h1>
+        <div class="input-container">
+            <input type="text" name="name" placeholder="Enter your name">
+            <a href="dob.html"><button class="circle-btn">Next</button></a>
+        </div>
+        <p>Login page</p>
     </div>
 
     <!-- Desktop warning -->
@@ -23,4 +29,5 @@
     </div>
 
 </body>
+
 </html>
