--- a/student.html
+++ b/student.html
@@ -12,8 +12,12 @@
     <div class="mobile-ui">
         <img src="logo.jpg" class="logo" alt="Logo">
 
-        <a href="regname.html"><button class="btn">Register as new student</button></a>
-        <a href="name.html"><button class="btn">I have AIS already</button></a>
+        <h1>Student's hub</h1>
+        <button class="btn">About me</button>
+        <button class="btn">AIS</button>
+        <button class="btn">Career</button>
+        <button class="btn">Problem Solving</button>
+        <button class="btn">How to?</button>
     </div>
 
     <!-- Desktop warning -->
