--- a/regdob.html
+++ b/regdob.html
@@ -12,8 +12,11 @@
     <div class="mobile-ui">
         <img src="logo.jpg" class="logo" alt="Logo">
 
-        <a href="regname.html"><button class="btn">Register as new student</button></a>
-        <a href="name.html"><button class="btn">I have AIS already</button></a>
+        <h1>Select your D.o.B</h1>
+        <div class="input-container">
+            <input type="date" class="dob" name="dob" placeholder="Enter your name">
+            <a href="regsuc.html"><button class="circle-btn">Login</button></a>
+        </div>
     </div>
 
     <!-- Desktop warning -->
