--- a/welcome.html
+++ b/welcome.html
@@ -12,8 +12,9 @@
     <div class="mobile-ui">
         <img src="logo.jpg" class="logo" alt="Logo">
 
-        <a href="regname.html"><button class="btn">Register as new student</button></a>
-        <a href="name.html"><button class="btn">I have AIS already</button></a>
+        <h2>Welcome back Joyal!</h2>
+        <h1>AIS Score 157</h1>
+        <a href="student.html"><button class="btn">Students hub</button></a>
     </div>
 
     <!-- Desktop warning -->
