--- a/regsuc.html
+++ b/regsuc.html
@@ -22,27 +22,7 @@
         <p>Please open this page on a mobile device.</p>
     </div>
 
-<script>
-    let count = 5;
-
-    let timer = setInterval(() => {
-        count--;
-
-        if (count > 0) {
-            document.getElementById("count").innerText = count;
-        } else {
-            // Hide the counter when 0 reached
-            document.getElementById("count").innerText = "";
-        }
-
-        // Direct redirect when count = 0
-        if (count === 0) {
-            clearInterval(timer);
-
-            window.location.href = "index.html";   // direct redirect
-        }
-    }, 1000);
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
