--- a/student.html
+++ b/student.html
@@ -13,11 +13,11 @@
         <img src="logo.jpg" class="logo" alt="Logo">
 
         <h1>Student's hub</h1>
-        <button class="btn">About me</button>
-        <button class="btn">AIS</button>
-        <button class="btn">Career</button>
-        <button class="btn">Problem Solving</button>
-        <button class="btn">How to?</button>
+        <a href="https://arka.org.in/resume-home.php"><button class="btn">About me</button></a>
+        <a href=""><button class="btn">AIS</button></a>
+        <a href=""><button class="btn">Career</button></a>
+        <a href=""><button class="btn">Problem Solving</button></a>
+        <a href=""><button class="btn">How to?</button></a>
     </div>
 
     <!-- Desktop warning -->
