--- a/college.html
+++ b/college.html
@@ -12,10 +12,10 @@
     <div class="mobile-ui">
         <img src="logo.jpg" class="logo" alt="Logo">
 
-        <h1>Select your D.o.B</h1>
+        <h1>Select your college</h1>
         <div class="input-container">
-            <input type="date" class="dob" name="dob" placeholder="Enter your name">
-            <a href="college.html"><button class="circle-btn">Next</button></a>
+            <input type="text" name="college" placeholder="Enter your College">
+            <a href="regsuc.html"><button class="create-btn">Create Account</button></a>
         </div>
     </div>
 
